[package]
name = "u64-id"
version = "0.2.0"
edition = "2024"
authors = ["Jonathan Spira <jjspira@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/sanbox-irl/u64-id"
description = "A tiny library providing a u64 backed id."
categories = ["game-development"]

[dependencies]
rand = { version = "0.9", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }

[features]
default = ["rand", "serde"]

[dev-dependencies]
serde_json = "1.0"
